# OTB_Zoo

./: .gitignore  README.md
CREST/: CREST_tracking.m  README.md  cnn_train_dag.m  cnn_train_dag_update.m  initNet.m  run_CREST.m  scale_estimation.m
CT_cpp/: CMakeLists.txt  CompressiveTracker.cpp  CompressiveTracker.h  README.md  TrackTask.cpp  TrackTask.h  main.cpp  run_CT.m
DSST_cpp/: CMakeLists.txt  README.md  dsst_tracker.hpp  main.cpp
DSST_cpp/common/: scale_estimator.hpp
KCF/: CMakeLists.txt  KCF.sln  KCF.vcxproj  KCF.vcxproj.filters  README.md  TrackTask.cpp  TrackTask.h  main.cpp  run_KCF.m
KCF/src/: main.cpp
KCF_cpp/: CMakeLists.txt  run_KCF.m
KCF_cpp/src/: main.cpp
MEEM/: MEEMTrack.m  README.txt  demo.m  run_MEEM.m
MEEM/mex/: compile.m
MTA/: CMakeLists.txt  README.md  run_MTA.m
MTA/include/: Backgrounds.h  Config.h  Features.h  HOGFeatures.h  HaarFeature.h  HaarFeatures.h  HistogramFeatures.h  ImageRep.h  IterTracker.h  Kernels.h  LaRank.h  MultiFeatures.h  RawFeatures.h  Rect.h  Sample.h  Sampler.h
MTA/src/: Backgrounds.cpp  Config.cpp  Features.cpp  HOGFeature.cpp  HaarFeature.cpp  HaarFeatures.cpp  HistogramFeatures.cpp  ImageRep.cpp  IterTracker.cpp  LaRank.cpp  MultiFeatures.cpp  RawFeatures.cpp  Sampler.cpp  main.cpp
SiamFC/: README  run_SiamFC.m
Staple/: params.txt  trackerMain.m
Struck/: CMakeLists.txt  README.md  config.txt  run_Struck.m
Struck/src/: Config.cpp  Config.h  Features.h  HaarFeature.h  HistogramFeatures.cpp  HistogramFeatures.h  ImageRep.cpp  ImageRep.h  Kernels.h  LaRank.cpp  LaRank.h  MultiFeatures.h  RawFeatures.h  Rect.h  Sample.h  Sampler.cpp  Sampler.h  Tracker.cpp  Tracker.h  main.cpp
Struck/src/GraphUtils/: GraphUtils.h
UCT/: README  get_axis_aligned_BB.m  ncc.m  run_UCT.m  solver_first_frame_second.prototxt  solver_next_frame_second.prototxt  training_ResNet_first.prototxt  training_ResNet_second.prototxt  vot.m
fDSST_cpp/: CMakeLists.txt  README.md
fDSST_cpp/src/: fdssttracker.cpp  fhog.cpp  main.cpp  recttools.hpp  runtracker.cpp
